Fixed md-collapse expansion issues

--- a/client/imports/ui/md-collapse/md-collapse.styl
+++ b/client/imports/ui/md-collapse/md-collapse.styl
@@ -11,15 +11,9 @@
   $display-flex()
   $flex-direction(row)
 .md-collapse__content
-  height 2.2rem
+  height 2.3rem
   overflow hidden
   transition height 0.3s
-.md-collapse__content.collapsed
-  .paragraph--first
-    margin-top 1rem
-    overflow hidden
-    text-overflow ellipsis
-    white-space nowrap
 .md-collapse__content-sizer
   padding 0.1px 0
 [data-collapse-toggle]
